samples/_failures_safe/1761044334_0c8457_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_16245649.c: In function ‘main’:
./samples/SAFE/__tmp_16245649.c:147:5: error: expected declaration or statement at end of input
  147 |     printf("\nMatrix 1:\n");
      |     ^~~~~~
